- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    6.3.0 Alpha
- 
    None
- 
        bc71496a34 (qt/qtbase/dev) bc71496a34 (qt/tqtc-qtbase/dev) 388f959080 (qt/qtbase/6.2) 388f959080 (qt/tqtc-qtbase/6.2) e4b439c8de (qt/qtbase/6.3) e4b439c8de (qt/tqtc-qtbase/6.3)
- 
        2022wk14FOAndroid&Automotive
XPASS : tst_QFontDatabase::condensedFontMatching() QCOMPARE(QFontMetrics(tfcByStretch).horizontalAdvance(testString()), QFontMetrics(tfcByStyleName).horizontalAdvance(testString())) returned TRUE unexpectedly. Loc: [/home/qt/work/qt/qtbase/tests/auto/gui/text/qfontdatabase/tst_qfontdatabase.cpp(449)] SKIP : tst_QFontDatabase::condensedFontMatching() This platform doesn't support font sub-family names (QTBUG-55625) [..] Totals: 12 passed, 1 failed, 13 skipped, 1 blacklisted, 82ms ********* Finished testing of tst_QFontDatabase ********* Execute /opt/android/sdk/platform-tools/adb uninstall org.qtproject.example.tst_qfontdatabase. Success qt-testrunner.py INFO: Test process exited with code: 0
The process returns 0, while it should have returned 1. Additionally the XML log file contains one "xpass" entry correctly.
EDIT: Even for crashed tests androidtestrunner can return success, see comment-644144.
- is covered by
- 
                    QTBUG-97695 correctly report Android test failures on crashes -         
- Closed
 
-         
- is required for
- 
                     QTBUG-98120
        Fix failing qtbase CI tests for Android QTBUG-98120
        Fix failing qtbase CI tests for Android-         
- In Progress
 
-         
- relates to
- 
                    QTBUG-100470 Undetected test crashes on Android -         
- Closed
 
-         
- 
                    QTBUG-97652 Improve test to show crashes and Jni env in Android -         
- Closed
 
-         
- mentioned in
- 
                    Page Loading...